--- a/index.html
+++ b/index.html
@@ -4,6 +4,64 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./output.css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
-  <body></body>
+  <body>
+    <!-- header -->
+
+    <div class="bg-[#0c2340]">
+      <div
+        class="container mx-auto text-white font-black grid grid-row-3 grid-flow-col"
+      >
+        <div class="row-span-2 self-center">
+          <a href="/">
+            <img src="/image/icon-mark.png" alt="" />
+          </a>
+        </div>
+        <div class="col-span-2">
+          <ul class="flex">
+            <li><a href="">About</a></li>
+            <li><a href="">Visit</a></li>
+            <li>
+              <a href=""
+                >Give
+                <img src="/image/icon-external-link.png" alt="" />
+              </a>
+            </li>
+            <li>
+              <a href=""
+                >Alumni
+                <img src="/image/icon-external-link.png" alt="" />
+              </a>
+            </li>
+            <li>
+              <a href=""
+                >Athletics
+                <img src="/image/icon-external-link.png" alt="" />
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="row-span-2 col-span-2">
+          <ul class="flex">
+            <li><a href="">Academics</a></li>
+            <li><a href="">Admissions</a></li>
+            <li><a href="">Reasearch</a></li>
+            <li><a href="">Global</a></li>
+            <li><a href="">Faith & Services</a></li>
+            <li><a href="">Campus Life </a></li>
+            <li>
+              <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
