--- a/index.html
+++ b/index.html
@@ -15,47 +15,45 @@
   <body>
     <!-- header -->
 
-    <div class="bg-[#0c2340]">
-      <div
-        class="container mx-auto text-white font-black grid grid-row-3 grid-flow-col"
-      >
-        <div class="row-span-2 self-center">
+    <div class="bg-[#0c2340] h-28">
+      <div class="container mx-auto text-white grid grid-cols-3 pt-6 pb-6">
+        <div class="col-span-1 row-span-2 self-center">
           <a href="/">
             <img src="/image/icon-mark.png" alt="" />
           </a>
         </div>
-        <div class="col-span-2">
-          <ul class="flex">
+        <div class="col-span-2 self-end">
+          <ul class="flex space-x-7 justify-end mr-20">
             <li><a href="">About</a></li>
             <li><a href="">Visit</a></li>
-            <li>
+            <li class="flex">
               <a href=""
                 >Give
-                <img src="/image/icon-external-link.png" alt="" />
+                <!-- <img src="/image/icon-external-link.png" alt="" /> -->
               </a>
             </li>
             <li>
               <a href=""
                 >Alumni
-                <img src="/image/icon-external-link.png" alt="" />
+                <!-- <img src="/image/icon-external-link.png" alt="" /> -->
               </a>
             </li>
             <li>
               <a href=""
                 >Athletics
-                <img src="/image/icon-external-link.png" alt="" />
+                <!-- <img src="/image/icon-external-link.png" alt="" /> -->
               </a>
             </li>
           </ul>
         </div>
-        <div class="row-span-2 col-span-2">
-          <ul class="flex">
+        <div class="bg-white text-black col-span-2 row-start-4 col-start-2 p-4">
+          <ul class="flex space-x-7 ml-20">
             <li><a href="">Academics</a></li>
             <li><a href="">Admissions</a></li>
             <li><a href="">Reasearch</a></li>
             <li><a href="">Global</a></li>
-            <li><a href="">Faith & Services</a></li>
-            <li><a href="">Campus Life </a></li>
+            <li><a href="">Faith&Services</a></li>
+            <li><a href="">CampusLife </a></li>
             <li>
               <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
             </li>
@@ -63,5 +61,7 @@
         </div>
       </div>
     </div>
+    <!-- body -->
+    <div></div>
   </body>
 </html>
