--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body>
+  <body class="">
     <!-- header -->
 
     <div class="bg-[#0c2340] h-28">
@@ -62,6 +62,42 @@
       </div>
     </div>
     <!-- body -->
-    <div></div>
+    <div
+      class="bg-[url('/image/campus_spring_scenic-1200.webp')] w-full h-[100vh] bg-cover bg-contain"
+    ></div>
+
+    <!-- Second -->
+    <div class="grid grid-cols-12 gap-32 pt-5 text-[#0c2340]">
+      <div class="col-span-4">
+        <img src="/image/globering_2025.jpeg" alt="" />
+        <div class="pt-4 pl-24">
+          <h1>UNIVERSITY</h1>
+          <p class="text-3xl">
+            University of Notre <br />
+            Dame wins award <br />
+            for excellence in <br />
+            campus <br />
+            internationalization
+          </p>
+        </div>
+      </div>
+      <div class="col-span-8">
+        <div class="bg-[] pt-20">
+          <h1 class="text-xl">Colleges and Schools</h1>
+          <p class="text-3xl pb-5 pt-2">
+            Physicist Laura Fields granted a Presidential Early <br />
+            Career Award
+          </p>
+        </div>
+        <div class="pt-20">
+          <h1 class="text-xl">Global</h1>
+          <p class="text-3xl pb-5 pt-2">
+            University of Notre Dame and Pontificia <br />
+            Universidad Católica de Chile dual PhD program <br />
+            welcomes all disciplines
+          </p>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
