--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body class="">
     <!-- header -->
 
-    <div class="bg-[#0c2340] h-28">
+    <div class="bg-[#081629] h-28">
       <div class="container mx-auto text-white grid grid-cols-3 pt-6 pb-6">
         <div class="col-span-1 row-span-2 self-center">
           <a href="/">
@@ -46,7 +46,9 @@
             </li>
           </ul>
         </div>
-        <div class="bg-white text-black col-span-2 row-start-4 col-start-2 p-4">
+        <div
+          class="bg-white text-black col-span-2 row-start-4 col-start-2 p-4 z-50 sticky"
+        >
           <ul class="flex space-x-7 ml-20">
             <li><a href="">Academics</a></li>
             <li><a href="">Admissions</a></li>
@@ -63,8 +65,12 @@
     </div>
     <!-- body -->
     <div
-      class="bg-[url('/image/campus_spring_scenic-1200.webp')] w-full h-[100vh] bg-cover bg-contain"
-    ></div>
+      class="bg-[url('/image/campus_spring_scenic-1200.webp')] w-full h-[100vh] bg-cover bg-contain relative"
+    >
+      <div
+        class="absolute h-full w-full bg-gradient-to-r from-[#081629]/50 to-[#081629]"
+      ></div>
+    </div>
 
     <!-- Second -->
     <div class="grid grid-cols-12 gap-32 pt-5 text-[#0c2340]">
@@ -96,6 +102,59 @@
             Universidad Católica de Chile dual PhD program <br />
             welcomes all disciplines
           </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- fourth -->
+
+    <div class="w-full h-[100vh] bg-cover bg-contain relative">
+      <div
+        class="absolute h-[1220px] w-full bg-gradient-to-r from-[#081629] to-[#081629] text-white"
+      >
+        <div class="grid grid-cols-12 gap-y-10">
+          <img
+            class="col-span-6"
+            src="/image/pillar-research-1200.avif"
+            alt=""
+          />
+          <div class="col-span-6 pt-10 ml-20">
+            <h1 class="pb-5">Research</h1>
+            <p class="text-4xl font-bold pb-10">The Opportunity of Inquiry</p>
+            <p class="font-normal pb-10">
+              For scholars who share a common passion for inquiry because of
+              what it <br />
+              can reveal about our world and ourselves, there is opportunity
+              here.
+            </p>
+            <p class="p-2 border rounded-lg w-40 ml-72">Research at ND</p>
+          </div>
+          <div class="col-span-6 pt-10 ml-20">
+            <h1 class="pb-5">Faith & Service</h1>
+            <p class="text-4xl font-bold pb-10">The Demands of Justice</p>
+            <p class="font-normal pb-10">
+              Notre Dame is animated by a faith that inspires us to seek
+              knowledge because of the powerful tool it can be to improve
+              humankind.
+            </p>
+            <button class="p-2 border rounded-lg w-50 ml-72">
+              Faith & Service at ND
+            </button>
+          </div>
+          <img class="col-span-6" src="/image/pillar-faith-1200.avif" alt="" />
+          <img class="col-span-6" src="/image/pillar-global-1200.avif" alt="" />
+          <div class="col-span-6 pt-10 ml-20">
+            <h1 class="pb-5">Global</h1>
+            <h2 class="text-4xl font-bold pb-10">The Connected World</h2>
+            <p class="font-normal pb-10">
+              Notre Dame seeks to be in the world, and to bring the world to
+              Notre Dame, because inquiry and scholarly exchange are enriched by
+              the pursuit of cultural fluency.
+            </p>
+            <button class="p-2 border rounded-lg w-50 ml-72">
+              Global Scholarship at ND
+            </button>
+          </div>
         </div>
       </div>
     </div>
