--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@
     </div>
 
     <!-- fourth -->
-
-    <div class="w-full h-[100vh] bg-cover bg-contain relative">
+    <div class="w-full h-[1220px] bg-cover relative">
       <div
         class="absolute h-[1220px] w-full bg-gradient-to-r from-[#081629] to-[#081629] text-white"
       >
@@ -120,8 +119,10 @@
           />
           <div class="col-span-6 pt-10 ml-20">
             <h1 class="pb-5">Research</h1>
-            <p class="text-4xl font-bold pb-10">The Opportunity of Inquiry</p>
-            <p class="font-normal pb-10">
+            <p class="text-4xl font-bold pb-5">The Opportunity of Inquiry</p>
+            <div class="bg-[#d39f10] w-10 h-1"></div>
+            <!-- <hr  /> -->
+            <p class="font-normal pb-10 pt-10">
               For scholars who share a common passion for inquiry because of
               what it <br />
               can reveal about our world and ourselves, there is opportunity
@@ -131,8 +132,9 @@
           </div>
           <div class="col-span-6 pt-10 ml-20">
             <h1 class="pb-5">Faith & Service</h1>
-            <p class="text-4xl font-bold pb-10">The Demands of Justice</p>
-            <p class="font-normal pb-10">
+            <p class="text-4xl font-bold pb-5">The Demands of Justice</p>
+            <div class="bg-[#d39f10] w-10 h-1"></div>
+            <p class="font-normal pb-10 pt-10">
               Notre Dame is animated by a faith that inspires us to seek
               knowledge because of the powerful tool it can be to improve
               humankind.
@@ -145,8 +147,9 @@
           <img class="col-span-6" src="/image/pillar-global-1200.avif" alt="" />
           <div class="col-span-6 pt-10 ml-20">
             <h1 class="pb-5">Global</h1>
-            <h2 class="text-4xl font-bold pb-10">The Connected World</h2>
-            <p class="font-normal pb-10">
+            <h2 class="text-4xl font-bold pb-5">The Connected World</h2>
+            <div class="bg-[#d39f10] w-10 h-1"></div>
+            <p class="font-normal pb-10 pt-10">
               Notre Dame seeks to be in the world, and to bring the world to
               Notre Dame, because inquiry and scholarly exchange are enriched by
               the pursuit of cultural fluency.
@@ -158,5 +161,57 @@
         </div>
       </div>
     </div>
+    <!-- hold -->
+
+    <div class="text-black mt-32 container mx-auto">
+      <h1 class="text-xl">University News</h1>
+      <div class="flex justify-between">
+        <h1 class="text-4xl">Notre Dame At Work</h1>
+        <button>view all news</button>
+      </div>
+      <div class="grid grid-cols-2">
+        <img class="z-" src="/image/globering_2025.jpeg" alt="" />
+        <div
+          class="bg-slate-200 flex justify-end pt-10 pr-16 relative gap-[-32px]"
+        >
+          <br />
+          <!-- <p class="text-xl"><span class="mb-32">International</span></p> -->
+          <p class="text-2xl">
+            University of Notre <br />
+            Dame wins award for <br />
+            excellence in campus <br />
+            internationalization <br />
+          </p>
+        </div>
+      </div>
+
+      <!-- additional -->
+      <div>
+        <div class="grid grid-cols-12 gap-10 pb-5 pt-5">
+          <div class="col-span-4 bg-">
+            <h1>Community News</h1>
+            <p class="text-2xl">
+              Notre Dame partners with <br />
+              community organizations
+              <br />
+              for Walk the Walk <br />
+              Week service project
+            </p>
+          </div>
+          <div>
+            <div class="flex flex-row">
+              <img src="/image/mc_mcob_banner.jpeg" alt="" />
+              <div class="text-2xl">
+                <h1>Latest News</h1>
+                <p>ND Ethics Week explores business and sustainability</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- all -->
+
+    <div></div>
   </body>
 </html>
