--- a/index.html
+++ b/index.html
@@ -212,6 +212,157 @@
     </div>
     <!-- all -->
 
+    <div class="mt-32 container mx-auto text-[#0c2340]">
+      <h1 class="text-xl">University Stories</h1>
+      <div class="flex justify-between">
+        <h1 class="text-4xl pb-5 pt-5 font-bold">Notre Dame In Focus</h1>
+        <button>view all stories</button>
+      </div>
+
+      <!-- cards -->
+
+      <div>
+        <div class="grid grid-cols-3 gap-4">
+          <div>
+            <img src="/image/2025-sampoorna-800.webp" alt="" />
+            <div class="p-5">
+              <h1 class="text-xl pb-4">GLOBAL</h1>
+              <p class="font-semibold pb-4 text-2xl">
+                Empowering through <br />
+                education
+              </p>
+              <p class="pb-4 text-xl">
+                A pathway out of poverty for children <br />
+                in India
+              </p>
+            </div>
+          </div>
+          <div>
+            <img src="/image/2025-habitat-800.jpeg" alt="" />
+            <div class="p-5">
+              <h1 class="text-xl pb-4">GLOBAL</h1>
+              <p class="font-semibold pb-4 text-2xl">
+                Habitat partnership bears <br />
+                fruit for homebuyers <br />
+                in South Bend
+              </p>
+            </div>
+          </div>
+          <div>
+            <img src="/image/2024-reasons-to-serve-800.webp" alt="" />
+            <div class="p-5">
+              <h1 class="text-xl pb-4">GLOBAL</h1>
+              <p class="font-semibold pb-4 text-2xl">Reasons to serve</p>
+              <p class="pb-4">
+                History, West Point, and 9/11 memorial <br />
+                inspire ND ROTC students in New York
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- next -->
+
+    <div class="flex text-white mt-9">
+      <blockquote
+        class="w-[800px] h-[500px] bg-[#081629] mt-10 mb-10 p-10 text-2xl"
+      >
+        <p class="font-semibold">
+          “Notre Dame must be the leading global Catholic research university,
+          on par with but distinct from the world's best private universities.
+          This effort to educate students and conduct research at the highest
+          level animated by a distinctive Catholic mission is one of the most
+          exciting and consequential experiments in global higher education.”
+        </p>
+        <p class="text-right font-extralight">
+          <cite>— Notre Dame 2033: A Strategic Framework</cite>
+        </p>
+      </blockquote>
+
+      <img class="w-[900px]" src="/image/dowd-students-400.jpeg" alt="" />
+    </div>
+
+    <!-- division -->
+    <div class="container mx-auto p-14">
+      <div class="mt-20">
+        <h1 class="text-xl">University Stories</h1>
+        <div class="flex justify-between">
+          <h1 class="text-4xl pb-5 pt-5 font-bold">Notre Dame In Focus</h1>
+          <button>view all stories</button>
+        </div>
+      </div>
+
+      <!-- card -->
+      <div class="grid grid-cols-2 gap-5 gap-y-10 pt-10">
+        <div class="flex space-x-12">
+          <div class="">
+            <p class="text-3xl">FEB</p>
+            <p class="font-bold text-5xl">28</p>
+          </div>
+          <div class="text-2xl">
+            <p class="font-semibold">
+              Ten Years Hence Lecture: "A Brief <br />
+              History of the Future"
+            </p>
+            <p class="font-serif">Fri, Feb 28 at 10:40 am</p>
+          </div>
+        </div>
+        <div class="flex space-x-12">
+          <div class="">
+            <p class="text-3xl">FEB</p>
+            <p class="font-bold text-5xl">28</p>
+          </div>
+          <div class="text-2xl">
+            <p class="font-semibold">
+              Ten Years Hence Lecture: "A Brief <br />
+              History of the Future"
+            </p>
+            <p class="font-serif">Fri, Feb 28 at 10:40 am</p>
+          </div>
+        </div>
+        <div class="flex space-x-12">
+          <div class="">
+            <p class="text-3xl">FEB</p>
+            <p class="font-bold text-5xl">28</p>
+          </div>
+          <div class="text-2xl">
+            <p class="font-semibold">
+              Ten Years Hence Lecture: "A Brief <br />
+              History of the Future"
+            </p>
+            <p class="font-serif">Fri, Feb 28 at 10:40 am</p>
+          </div>
+        </div>
+        <div class="flex space-x-12">
+          <div class="">
+            <p class="text-3xl">FEB</p>
+            <p class="font-bold text-5xl">28</p>
+          </div>
+          <div class="text-2xl">
+            <p class="font-semibold">
+              Ten Years Hence Lecture: "A Brief <br />
+              History of the Future"
+            </p>
+            <p class="font-serif">Fri, Feb 28 at 10:40 am</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- footer -->
+    <div class="bg-[#081629] p-10 text-white font-normal text-md">
+      <ul class="flex space-x-12 ml-56">
+        <li><a href="" rel="">Bookstore</a></li>
+        <li><a href="" rel="">Employment</a></li>
+        <li><a href="" rel="">Tour</a></li>
+        <li><a href="" rel="">InsideND</a></li>
+        <li><a href="" rel="">Academic Calendar</a></li>
+      </ul>
+    </div>
+    <!-- other -->
+
     <div></div>
   </body>
 </html>
