--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
             <p class="text-3xl">FEB</p>
             <p class="font-bold text-5xl">28</p>
           </div>
-          <div class="text-2xl">
+          <div class="text-xl">
             <p class="font-semibold">
               Ten Years Hence Lecture: "A Brief <br />
               History of the Future"
@@ -362,7 +362,69 @@
       </ul>
     </div>
     <!-- other -->
+    <div class="container mx-auto flex items-center justify-between p-10">
+      <div>
+        <img src="/image/morr.png" alt="" />
+      </div>
+      <div>
+        <div class="flex space-x-11 items-center">
+          <div>
+            <div class="flex space-x-3 items-center justify-center">
+              <i class="fa-brands fa-square-facebook"></i>
+              <h1>Facebook</h1>
+            </div>
+            <div class="flex space-x-3 justify-center items-center">
+              <i class="fa-brands fa-youtube"></i>
+              <h1>YouTube</h1>
+            </div>
+          </div>
 
-    <div></div>
+          <div class="">
+            <div class="flex space-x-3 justify-center items-center">
+              <i class="fa-brands fa-x-twitter"></i>
+              <h1>X/Twitter</h1>
+            </div>
+            <div class="flex space-x-3 justify-center items-center">
+              <i class="fa-brands fa-linkedin-in"></i>
+              <h1>LinkedIn</h1>
+            </div>
+          </div>
+          <div class="flex space-x-3 justify-center items-center">
+            <i class="fa-brands fa-instagram"></i>
+            <h1>Instagram</h1>
+          </div>
+        </div>
+      </div>
+
+      <div>
+        © 2025 University of Notre Dame <br />
+        Notre Dame, IN 46556 USA <br />
+        Phone: (574) 631-5000 <br />
+        Contact
+      </div>
+    </div>
+
+    <!-- last -->
+    <div class="text-[#333] bg-[#555]">
+      <div
+        class="container mx-auto flex flex-col md:flex-row items-center justify-between pr-10 pt-5 pb-5 pl-10"
+      >
+        <ul class="flex flex-col md:flex-row items-center space-x-5 space-y-3">
+          <li><a href="">Search</a></li>
+          <li><a href="">Mobile App</a></li>
+          <li><a href="">News</a></li>
+          <li><a href="">Events</a></li>
+          <li><a href="">Visit</a></li>
+        </ul>
+        <ul
+          class="flex flex-col md:flex-row md:space-x-10 ml-28 md:ml-60 space-y-3"
+        >
+          <li><a href="">Accessibility</a></li>
+          <li><a href="">Emergency</a></li>
+          <li><a href="">Closed Captioning</a></li>
+          <li><a href="">Notice of Non-Discrimination</a></li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
