--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     </div>
 
     <!-- fourth -->
-    <div class="w-full h-[1220px] bg-cover relative">
+    <div class="w-full h-[1220px] bg-cover relative mt-10">
       <div
         class="absolute h-[1220px] w-full bg-gradient-to-r from-[#081629] to-[#081629] text-white"
       >
@@ -164,10 +164,10 @@
     <!-- hold -->
 
     <div class="text-black mt-32 container mx-auto">
-      <h1 class="text-xl">University News</h1>
-      <div class="flex justify-between">
-        <h1 class="text-4xl">Notre Dame At Work</h1>
-        <button>view all news</button>
+      <h1 class="text-xl">UNIVERSITY OF NEWS</h1>
+      <div class="pb-3">
+        <h1 class="text-4xl pb-5 pt-5 font-bold">Notre Dame In Focus</h1>
+        <div class="bg-[#d39f10] w-10 h-1"></div>
       </div>
       <div class="grid grid-cols-2">
         <img class="z-" src="/image/globering_2025.jpeg" alt="" />
@@ -213,10 +213,18 @@
     <!-- all -->
 
     <div class="mt-32 container mx-auto text-[#0c2340]">
-      <h1 class="text-xl">University Stories</h1>
-      <div class="flex justify-between">
-        <h1 class="text-4xl pb-5 pt-5 font-bold">Notre Dame In Focus</h1>
-        <button>view all stories</button>
+      <h1 class="text-xl">UNIVERSITY OF STORIES</h1>
+      <div class="flex justify-between pb-5">
+        <div>
+          <h1 class="text-4xl pb-5 pt-5 font-bold">Notre Dame In Focus</h1>
+          <div class="bg-[#d39f10] w-10 h-1"></div>
+        </div>
+        <div
+          class="flex items-center space-x-2 hover:bg-[#c1cddd] hover:rounded-lg hover:h-10 hover:p-3"
+        >
+          <button>view all stories</button>
+          <img src="/image/Vector.png" alt="" />
+        </div>
       </div>
 
       <!-- cards -->
@@ -287,10 +295,19 @@
     <!-- division -->
     <div class="container mx-auto p-14">
       <div class="mt-20">
-        <h1 class="text-xl">University Stories</h1>
+        <h1 class="text-xl">UNIVERSITY EVENTS</h1>
         <div class="flex justify-between">
-          <h1 class="text-4xl pb-5 pt-5 font-bold">Notre Dame In Focus</h1>
-          <button>view all stories</button>
+          <div>
+            <h1 class="text-4xl pb-5 pt-5 font-bold">Notre Dame In Focus</h1>
+            <div class="bg-[#d39f10] w-10 h-1"></div>
+          </div>
+
+          <div
+            class="flex items-center space-x-2 hover:bg-[#c1cddd] hover:rounded-lg hover:h-10 hover:p-3"
+          >
+            <button>view all stories</button>
+            <img src="/image/Vector.png" alt="" />
+          </div>
         </div>
       </div>
 
@@ -301,7 +318,7 @@
             <p class="text-3xl">FEB</p>
             <p class="font-bold text-5xl">28</p>
           </div>
-          <div class="text-2xl">
+          <div class="text-2xl hover:bg-[#c1cddd] hover:p-4">
             <p class="font-semibold">
               Ten Years Hence Lecture: "A Brief <br />
               History of the Future"
@@ -314,7 +331,7 @@
             <p class="text-3xl">FEB</p>
             <p class="font-bold text-5xl">28</p>
           </div>
-          <div class="text-2xl">
+          <div class="text-2xl hover:bg-[#c1cddd] hover:p-4">
             <p class="font-semibold">
               Ten Years Hence Lecture: "A Brief <br />
               History of the Future"
@@ -327,7 +344,7 @@
             <p class="text-3xl">FEB</p>
             <p class="font-bold text-5xl">28</p>
           </div>
-          <div class="text-xl">
+          <div class="text-xl hover:bg-[#c1cddd] hover:p-4">
             <p class="font-semibold">
               Ten Years Hence Lecture: "A Brief <br />
               History of the Future"
@@ -340,7 +357,7 @@
             <p class="text-3xl">FEB</p>
             <p class="font-bold text-5xl">28</p>
           </div>
-          <div class="text-2xl">
+          <div class="text-2xl hover:bg-[#c1cddd] hover:p-4">
             <p class="font-semibold">
               Ten Years Hence Lecture: "A Brief <br />
               History of the Future"
@@ -353,7 +370,9 @@
 
     <!-- footer -->
     <div class="bg-[#081629] p-10 text-white font-normal text-md">
-      <ul class="flex space-x-12 ml-56">
+      <ul
+        class="flex space-x-12 ml-10 md:ml-56 flex-col md:flex-row space-y-3 md:space-y-0"
+      >
         <li><a href="" rel="">Bookstore</a></li>
         <li><a href="" rel="">Employment</a></li>
         <li><a href="" rel="">Tour</a></li>
@@ -362,14 +381,20 @@
       </ul>
     </div>
     <!-- other -->
-    <div class="container mx-auto flex items-center justify-between p-10">
+    <div
+      class="container mx-auto flex items-center justify-between p-10 flex-col md:flex-row"
+    >
       <div>
         <img src="/image/morr.png" alt="" />
       </div>
       <div>
-        <div class="flex space-x-11 items-center">
+        <div
+          class="flex space-x-11 items-center flex-col md:flex-row space-y-3 md:space-y-0"
+        >
           <div>
-            <div class="flex space-x-3 items-center justify-center">
+            <div
+              class="flex space-x-3 items-center justify-center space-y-3 md:space-y-0"
+            >
               <i class="fa-brands fa-square-facebook"></i>
               <h1>Facebook</h1>
             </div>
@@ -380,7 +405,9 @@
           </div>
 
           <div class="">
-            <div class="flex space-x-3 justify-center items-center">
+            <div
+              class="flex space-x-3 justify-center items-center space-y-3 md:space-y-0"
+            >
               <i class="fa-brands fa-x-twitter"></i>
               <h1>X/Twitter</h1>
             </div>
@@ -407,18 +434,18 @@
     <!-- last -->
     <div class="text-[#333] bg-[#555]">
       <div
-        class="container mx-auto flex flex-col md:flex-row items-center justify-between pr-10 pt-5 pb-5 pl-10"
+        class="container mx-auto flex flex-col md:flex-row justify-between pr-10 pt-5 pb-5 pl-10"
       >
-        <ul class="flex flex-col md:flex-row items-center space-x-5 space-y-3">
+        <ul
+          class="flex flex-col md:flex-row items-center space-x-5 space-y-3 md:space-y-0"
+        >
           <li><a href="">Search</a></li>
           <li><a href="">Mobile App</a></li>
           <li><a href="">News</a></li>
           <li><a href="">Events</a></li>
           <li><a href="">Visit</a></li>
         </ul>
-        <ul
-          class="flex flex-col md:flex-row md:space-x-10 ml-28 md:ml-60 space-y-3"
-        >
+        <ul class="flex flex-col md:flex-row md:space-x-10 ml-32 md:ml-60">
           <li><a href="">Accessibility</a></li>
           <li><a href="">Emergency</a></li>
           <li><a href="">Closed Captioning</a></li>
