--- a/index.html
+++ b/index.html
@@ -69,14 +69,24 @@
     >
       <div
         class="absolute h-full w-full bg-gradient-to-r from-[#081629]/50 to-[#081629]"
-      ></div>
+      >
+        <div class="flex flex-row">
+          <!-- <img src="/image/logo-wwyff-w.svg" alt="" />
+          <p>
+            Notre Dame attracts people willing to take action to find solutions
+            to humanity's most pressing challenges. "What would you fight for?"
+            For us, it's not a question. It's a call to action. We are the
+            Fighting Irish.
+          </p> -->
+        </div>
+      </div>
     </div>
 
     <!-- Second -->
     <div class="grid grid-cols-12 gap-32 pt-5 text-[#0c2340]">
       <div class="col-span-4">
         <img src="/image/globering_2025.jpeg" alt="" />
-        <div class="pt-4 pl-24">
+        <div class="pt-4">
           <h1>UNIVERSITY</h1>
           <p class="text-3xl">
             University of Notre <br />
@@ -111,13 +121,13 @@
       <div
         class="absolute h-[1220px] w-full bg-gradient-to-r from-[#081629] to-[#081629] text-white"
       >
-        <div class="grid grid-cols-12 gap-y-10">
+        <div class="grid grid-cols-1 md:grid-cols-12 gap-y-10">
           <img
             class="col-span-6"
             src="/image/pillar-research-1200.avif"
             alt=""
           />
-          <div class="col-span-6 pt-10 ml-20">
+          <div class="md:col-span-6 pt-10 ml-20">
             <h1 class="pb-5">Research</h1>
             <p class="text-4xl font-bold pb-5">The Opportunity of Inquiry</p>
             <div class="bg-[#d39f10] w-10 h-1"></div>
@@ -130,7 +140,7 @@
             </p>
             <p class="p-2 border rounded-lg w-40 ml-72">Research at ND</p>
           </div>
-          <div class="col-span-6 pt-10 ml-20">
+          <div class="md:col-span-6 pt-10 ml-20">
             <h1 class="pb-5">Faith & Service</h1>
             <p class="text-4xl font-bold pb-5">The Demands of Justice</p>
             <div class="bg-[#d39f10] w-10 h-1"></div>
@@ -163,14 +173,14 @@
     </div>
     <!-- hold -->
 
-    <div class="text-black mt-32 container mx-auto">
+    <div class="text-black mt-32 container mx-auto p-10">
       <h1 class="text-xl">UNIVERSITY OF NEWS</h1>
       <div class="pb-3">
         <h1 class="text-4xl pb-5 pt-5 font-bold">Notre Dame In Focus</h1>
         <div class="bg-[#d39f10] w-10 h-1"></div>
       </div>
       <div class="grid grid-cols-2">
-        <img class="z-" src="/image/globering_2025.jpeg" alt="" />
+        <img class="" src="/image/globering_2025.jpeg" alt="" />
         <div
           class="bg-slate-200 flex justify-end pt-10 pr-16 relative gap-[-32px]"
         >
@@ -187,22 +197,34 @@
 
       <!-- additional -->
       <div>
-        <div class="grid grid-cols-12 gap-10 pb-5 pt-5">
-          <div class="col-span-4 bg-">
-            <h1>Community News</h1>
-            <p class="text-2xl">
-              Notre Dame partners with <br />
-              community organizations
-              <br />
-              for Walk the Walk <br />
-              Week service project
-            </p>
+        <div class="grid grid-cols-12 gap-10 pb-5 pt-10">
+          <div class="col-span-4">
+            <div>
+              <h1>Community News</h1>
+              <p class="text-2xl">
+                Notre Dame partners with <br />
+                community organizations
+                <br />
+                for Walk the Walk <br />
+                Week service project
+              </p>
+            </div>
+            <div class="pt-10">
+              <h1>Community News</h1>
+              <p class="text-2xl">
+                Notre Dame partners with <br />
+                community organizations
+                <br />
+                for Walk the Walk <br />
+                Week service project
+              </p>
+            </div>
           </div>
-          <div>
-            <div class="flex flex-row">
-              <img src="/image/mc_mcob_banner.jpeg" alt="" />
-              <div class="text-2xl">
-                <h1>Latest News</h1>
+          <div class="col-span-8">
+            <div class="flex">
+              <img class="w-1/3" src="/image/mc_mcob_banner.jpeg" alt="" />
+              <div class="text-xl pl-5">
+                <h1 class="text-2xl">Latest News</h1>
                 <p>ND Ethics Week explores business and sustainability</p>
               </div>
             </div>
@@ -230,7 +252,7 @@
       <!-- cards -->
 
       <div>
-        <div class="grid grid-cols-3 gap-4">
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
           <div>
             <img src="/image/2025-sampoorna-800.webp" alt="" />
             <div class="p-5">
@@ -273,7 +295,9 @@
 
     <!-- next -->
 
-    <div class="flex text-white mt-9">
+    <div
+      class="flex text-white mt-9 md:flex-row flex-col md:flex-nowrap flex-wrap"
+    >
       <blockquote
         class="w-[800px] h-[500px] bg-[#081629] mt-10 mb-10 p-10 text-2xl"
       >
@@ -312,7 +336,7 @@
       </div>
 
       <!-- card -->
-      <div class="grid grid-cols-2 gap-5 gap-y-10 pt-10">
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-5 gap-y-10 pt-10">
         <div class="flex space-x-12">
           <div class="">
             <p class="text-3xl">FEB</p>
