--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body class="">
-    <!-- header -->
-
+  <body class="max-w-screen overflow-x-hidden">
     <div class="bg-[#081629] h-28">
       <div class="container mx-auto text-white grid grid-cols-3 pt-6 pb-6">
         <div class="col-span-1 row-span-2 self-center">
@@ -22,32 +20,29 @@
             <img src="/image/icon-mark.png" alt="" />
           </a>
         </div>
-        <div class="col-span-2 self-end">
-          <ul class="flex space-x-7 justify-end mr-20">
+        <div class="col-span-2 self-end hidden md:block">
+          <ul class="flex space-x-10 justify-end mr-20">
             <li><a href="">About</a></li>
             <li><a href="">Visit</a></li>
-            <li class="flex">
-              <a href=""
-                >Give
-                <!-- <img src="/image/icon-external-link.png" alt="" /> -->
-              </a>
+            <li class="flex justify-center items-center space-x-2">
+              <a href="">Give </a>
+              <img src="/image/icon-external-link.png" alt="" />
             </li>
-            <li>
-              <a href=""
-                >Alumni
-                <!-- <img src="/image/icon-external-link.png" alt="" /> -->
-              </a>
+            <li class="flex justify-center items-center space-x-2">
+              <a href="">Alumni </a>
+              <img src="/image/icon-external-link.png" alt="" />
             </li>
-            <li>
-              <a href=""
-                >Athletics
-                <!-- <img src="/image/icon-external-link.png" alt="" /> -->
-              </a>
+            <li class="flex justify-center items-center space-x-2">
+              <a href="">Athletics </a>
+              <img src="/image/icon-external-link.png" alt="" />
             </li>
           </ul>
         </div>
+        <div class="block ml-52 md:hidden">
+          <i class="fa-solid fa-bars"></i>
+        </div>
         <div
-          class="bg-white text-black col-span-2 row-start-4 col-start-2 p-4 z-50 sticky"
+          class="bg-white text-black col-span-2 row-start-4 col-start-2 p-4 z-50 sticky hidden md:block"
         >
           <ul class="flex space-x-7 ml-20">
             <li><a href="">Academics</a></li>
@@ -63,25 +58,59 @@
         </div>
       </div>
     </div>
-    <!-- body -->
-    <div
-      class="bg-[url('/image/campus_spring_scenic-1200.webp')] w-full h-[100vh] bg-cover bg-contain relative"
-    >
+
+    <!-- header -->
+
+    <section class="relative w-full h-screen p-10">
+      <div class="absolute inset-0">
+        <img
+          src="image/campus_spring_scenic-1200.webp"
+          alt="hero"
+          class="w-full h-full object-cover"
+        />
+      </div>
+
       <div
-        class="absolute h-full w-full bg-gradient-to-r from-[#081629]/50 to-[#081629]"
+        class="absolute inset-0 bg-blue-950/70 flex flex-col items-center justify-center md:flex-col md:justify-end md:align-end gap-7"
       >
-        <div class="flex flex-row">
-          <!-- <img src="/image/logo-wwyff-w.svg" alt="" />
-          <p>
-            Notre Dame attracts people willing to take action to find solutions
-            to humanity's most pressing challenges. "What would you fight for?"
-            For us, it's not a question. It's a call to action. We are the
-            Fighting Irish.
-          </p> -->
+        <div class="container mx-auto h-full my-30">
+          <div
+            class="flex flex-col lg:flex-col items-center justify-center w-full h-full"
+          >
+            <!-- Image Section -->
+            <div
+              class="lg:w-1/2 flex justify-center md:justify-end md:align-end w-full md:w-1/2 ml-5 md:ml-[600px]"
+            >
+              <img
+                src="image/logo-wwyff-w.svg"
+                alt="image"
+                class="w-1/3 mt-5"
+              />
+            </div>
+
+            <!-- Text Content Section -->
+            <div
+              class="lg:w-1/2 text-white text-center md:text-right mt-8 lg:mt-0 lg:ml-[600px]"
+            >
+              <p class="text-xl md:text-2xl mb-12 max-w-2xl mx-auto">
+                Notre Dame attracts people willing to take action to find
+                solutions to humanity's most pressing challenges. "What would
+                you fight for?" For us, it's not a question. It's a call to
+                action. We are the Fighting Irish.
+              </p>
+
+              <a
+                href="#"
+                class="inline-flex items-center bg-white text-blue-950 px-8 py-4 rounded-md text-lg font-medium hover:bg-opacity-90 transition-all"
+              >
+                What would you fight for?
+                <img src="image/external-link-gold.svg" class="w-5" />
+              </a>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-
+    </section>
     <!-- Second -->
     <div
       class="grid grid-cols-1 lg:grid-cols-12 gap-8 lg:gap-32 pt-5 text-[#0c2340]"
