--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body class="max-w-screen overflow-x-hidden">
-    <div class="bg-[#081629] h-28">
+  <body class="max-w-screen overflow-x-hidden font-color">
+    <div class="bg-[#081629] h-28 border-t-4 border-[#d39f10]">
       <div class="container mx-auto text-white grid grid-cols-3 pt-6 pb-6">
         <div class="col-span-1 row-span-2 self-center">
           <a href="/">
@@ -87,7 +87,6 @@
               />
             </div>
 
-            <!-- Text Content Section -->
             <div
               class="lg:w-1/2 text-white text-center md:text-right mt-8 lg:mt-0 lg:ml-[600px]"
             >
@@ -110,12 +109,10 @@
         </div>
       </div>
     </section>
-    <!-- Second -->
     <div
       class="grid grid-cols-1 lg:grid-cols-12 gap-8 lg:gap-32 pt-5 text-[#0c2340]"
     >
-      <!-- Left Column -->
-      <div class="lg:col-span-4">
+      <div class="lg:col-span-4 hover:bg-[#c1cddd] hover:m-4 hover:rounded">
         <div class="relative">
           <img
             src="/image/globering_2025.jpeg"
@@ -123,7 +120,7 @@
             class="w-full object-cover"
           />
         </div>
-        <div class="pt-4">
+        <div class="pt-4 pl-10 pb-10">
           <h1 class="text-lg mb-2">UNIVERSITY</h1>
           <p class="text-2xl md:text-3xl font-medium leading-tight">
             University of Notre Dame wins award for excellence in campus
@@ -132,20 +129,22 @@
         </div>
       </div>
 
-      <!-- Right Column -->
       <div class="lg:col-span-8">
-        <!-- First News Item -->
-        <div class="pt-8 lg:pt-20">
+        <div
+          class="pt-8 lg:pt-20 hover:bg-[#c1cddd] hover:m-4 hover:rounded p-3 hover:p-3"
+        >
           <h1 class="text-lg md:text-xl">Colleges and Schools</h1>
-          <p class="text-2xl md:text-3xl pb-5 pt-2 leading-tight">
+          <p class="text-2xl md:text-2xl pb-5 pt-2 leading-tight">
             Physicist Laura Fields granted a Presidential Early Career Award
           </p>
         </div>
 
         <!-- Second News Item -->
-        <div class="pt-8 lg:pt-20">
+        <div
+          class="pt-8 lg:pt-20 hover:bg-[#c1cddd] hover:m-4 hover:rounded hover:p-3"
+        >
           <h1 class="text-lg md:text-xl">Global</h1>
-          <p class="text-2xl md:text-3xl pb-5 pt-2 leading-tight">
+          <p class="text-2xl md:text-2xl pb-5 pt-2 leading-tight">
             University of Notre Dame and Pontificia Universidad Católica de
             Chile dual PhD program welcomes all disciplines
           </p>
